# Liepa

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: Delegate.hpp  Event.hpp  EventArgs.hpp  EventHandler.hpp  EventType.hpp  Globals.hpp  Liepa.cpp  Publisher.hpp  Rectangle.hpp  Subscriber.hpp  Window.cpp  Window.hpp
Tests/: Delegate_test.cpp  EventHandler_test.cpp  Globals_test.cpp
